<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1.0"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/marginTopValue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.143"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upperTextViewText"
            android:textColor="@color/blueColor"
            android:textSize="@dimen/sizeUpperTextViewText"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopValue"
        android:layout_weight="0.143"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowerTextViewText"
            android:textColor="@color/blueColor"
            android:textSize="@dimen/sizeLowerTextViewText"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopValue"
        android:layout_weight="0.143"
        android:gravity="center"
        android:text="@string/EditTextText"
        android:textColor="@color/blueColor"
        android:textSize="@dimen/sizeEditTextText"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopValue"
        android:layout_weight="0.143"
        android:gravity="left"
        android:orientation="horizontal">

        <Button
            android:id="@+id/switchLayout_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopValue"
            android:text="@string/buttonText"
            android:textAllCaps="false"
            android:textColor="@color/redColor"
            android:textSize="@dimen/buttonTextSize" />
        <!--android:onClick="switchLayout2"-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopValue"
        android:layout_weight="0.143"
        android:gravity="end"
        android:orientation="horizontal">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/switchText"
            android:textColor="@color/redColor"
            android:textSize="@dimen/sizeLowerTextViewText"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopValue"
        android:layout_weight="0.143"
        android:gravity="left"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopValue"
            android:layout_weight="0.143"
            android:gravity="left"
            android:text="@string/checkBoxText"
            android:textColor="@color/redColor"
            android:textSize="@dimen/sizeLowerTextViewText"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopValue"
        android:layout_weight="0.142"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggleButtonText"
            android:textColor="@color/redColor"
            android:textSize="@dimen/sizeLowerTextViewText"
            android:textStyle="bold" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blueColor"
            android:textSize="@dimen/sizeToggleButtonText"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>